<resources>
    <string name="app_name">Petagram2</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_fav">Favorites</string>
    <string name="menu_huella">Huella</string>
    <string name="floating_buttom">Agregar Foto</string>
    <string name="pet1">Zeus</string>
    <string name="pet2">Toby</string>
    <string name="pet3">Druppy</string>
    <string name="pet4">Mateo</string>
    <string name="pet5">Lucas</string>
    <string name="pet6">Luna</string>
    <string name="pet7">Bruno</string>
</resources>
