<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/iHuella"
        android:icon="@drawable/huella"
        android:title="@string/menu_huella"
        app:showAsAction="always"
        ></item>

    <item
            android:id="@+id/iLike"
            android:title="@string/menu_fav"
            android:icon="@drawable/fav"
            app:showAsAction="always"
            ></item>

        <item
            android:id="@+id/mAbout"
            android:title="@string/menu_about"
            android:orderInCategory="1"></item>
        <item
            android:id="@+id/mSettings"
            android:title="@string/menu_settings"
            android:orderInCategory="2"></item>






</menu>